# alchemy

./: .gitignore  README.md  __init__.py  __main__.py  model.py  optim.py  plugins.py  pyproject.toml  registry.py  runner.py  sched.py  scheduler.py  task.py
pipeline/: __init__.py  itr.py  lst.py  output.py  sched.py
util/: __init__.py  alloc_gpu.py  collate_fn.py  device.py  json.py  optim.py  sym.py
util/ddp/: accelerate.py
util/extention/: rich.py
util/inference/: nlp.py
web/: __init__.py  plugins.py
web/backend/: __init__.py
web/frontend/: index.html
web/frontend/assets/: About.f07f856b.js  Inbox.001e96f6.js  Inbox.77969d57.js  Inbox.c40e09b5.js  Inbox.e902d8cc.css  Records.16fc2f84.js  Records.170f893b.js  Records.6c696c40.css  Records.be055955.js  Setting.173407ad.js  Starred.e8781e17.js  VContainer.cde25caf.js  VToolbar.fcd4242e.js  index.39c508b5.js  index.89b1e292.css  index.93fee454.js  index.b0c8149b.css  index.c1a0175a.js  index.fb79f24e.css
